# TetrisDeepLearningAI

./: README.md  dql_model_regular.h5  dqn_agent.py  hill_climb.py  logs.py  main.py  pyproject.toml  requirements.txt  run.py  run_dql.py  scores.py  temp.py  test.py  test_dql.py  tetris.py  tetris_ai.py  tetris_trainer.py
logs/tetris-nn=[32, 32]-mem=20000-bs=512-e=1-20210405-102711/: events.out.tfevents.1617632831.DESKTOP-VUJV6LG.28064.96.v2
logs/tetris-nn=[32, 32]-mem=20000-bs=512-e=1-20210508-135402/: events.out.tfevents.1620496442.Oscars-MacBook-Pro.local.95430.96.v2
logs/tetris-nn=[32, 32]-mem=20000-bs=512-e=1-20210508-154934/: events.out.tfevents.1620503374.Oscars-MacBook-Pro.local.96363.96.v2
logs/tetris-nn=[32, 32]-mem=20000-bs=512-e=1-20210508-182650/: events.out.tfevents.1620512810.Oscars-MacBook-Pro.local.97151.96.v2
logs/tetris-nn=[32, 32]-mem=20000-bs=512-e=1-20210515-160207/: events.out.tfevents.1621108927.Oscars-MacBook-Pro.local.26050.96.v2
logs/tetris-nn=[32, 32]-mem=20000-bs=512-e=1-20210515-162133/: events.out.tfevents.1621110093.Oscars-MacBook-Pro.local.26302.96.v2
scores/: 95-1400-001-4-best.csv  95-1400-01-1-best.csv  95-1400-05-1-best.csv  dql_heuristic.xlsx  newHeuristic.csv  newHeuristic3.csv  oscar1.csv  rows_cleared.csv  test_dql.csv  test_scores_regular_dql.csv  test_scores_rule_based_dql.csv
trained_models/: 95-1400-001-4-best.h5  95-1400-01-1-best.h5  95-1400-05-1-best.h5  baseline_rows_cleared.h5  newHeuristic.h5  newHeuristic3.h5  rb_dql_agent.h5  rows_cleared.h5  test_init_model.h5  test_model.h5
(+3 files in other folders)
