[tool.poetry]
name = "Tetris"
version = "0.1.0"
description = "Deep Learning + Rule Based AI for Tetris"
authors = ["Michael Russo <mr799@cornell.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.4.1"
tensorboard = "^2.4.1"
Keras = "^2.4.3"
opencv-python = "^4.5.1"
numpy = "1.19.5"
Pillow = "^8.1.1"
scikit-learn = "^0.24.1"
tqdm = "^4.58.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
